--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Scrapy
+Scrapy>=1.0.2
 service_identity==1.0.0
 https://github.com/scrapinghub/scrapinghub-entrypoint-scrapy/tarball/7e9190e#egg=sh_scrapy
